2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Simplified "generate implied end tag" (HTML5
	revision 1320).

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): Merge rules for "h1"
	and "div" (HTML5 revision 1318).  Add comments to where
	|form| pointer association codes should be inserted (HTML5 revision
	1319).

2008-03-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: <html> treatement refined (HTML5 revision 1314).

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Since the case t268 should never be reached (no
	other token type, there are), it is replaced by a |die| statement.

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Typo fixed.

2008-03-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_initial): Some limited quirks
	doctypes were not uppercased for comparison.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (tree construction and set_inner_html): Checkpoints
	are added.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tokenize_attempt_to_consume_an_entity): Checkpoints
	are set.  Cases that are unlikely reached are noted as so.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Checkpoints for debugging are added.

	* mkhtmlparser.pl: Support for |!!!cp| syntax.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: s/_input_character/_char/g
	for simplicity.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Flag name changed: s/correct/force-quirks/g (HTML5
	revision 1307).

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): Where the /incorrect/ flag
	is set are changed (HTML5 revision 1305).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Raise a parse error for |<span ===>| (HTML5 revision
	1292).  Entities are not parsed in comment-like part in RCDATA
	elements (HTML5 revision 1294).  Allow bare & at the end