@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.86 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.87 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -10689,7 +10689,6 @@ sub _tree_construction_main ($) {
                 address => 1, blockquote => 1, center => 1, dir => 1,
                 div => 1, dl => 1, fieldset => 1, listing => 1,
                 menu => 1, ol => 1, pre => 1, ul => 1,
-                p => 1,
                 dd => 1, dt => 1, li => 1,
                 button => 1, marquee => 1, object => 1,
                }->{$token->{tag_name}}) {
@@ -10703,7 +10702,7 @@ sub _tree_construction_main ($) {
                     dd => ($token->{tag_name} ne 'dd'),
                     dt => ($token->{tag_name} ne 'dt'),
                     li => ($token->{tag_name} ne 'li'),
-                    p => ($token->{tag_name} ne 'p'),
+                    p => 1,
                    }->{$self->{open_elements}->[-1]->[1]}) {
               
       $Whatpm::HTML::Debug::cp_pass->('t409') if $Whatpm::HTML::Debug::cp_pass;
@@ -10721,7 +10720,7 @@ sub _tree_construction_main ($) {
       }
     
             $i = $_;
-            last INSCOPE unless $token->{tag_name} eq 'p';
+            last INSCOPE;
           } elsif ({
                     table => 1, caption => 1, td => 1, th => 1,
                     button => 1, marquee => 1, object => 1, html => 1,
@@ -10764,20 +10763,6 @@ sub _tree_construction_main ($) {
       }
     
           splice @{$self->{open_elements}}, $i;
-        } elsif ($token->{tag_name} eq 'p') {
-          
-      $Whatpm::HTML::Debug::cp_pass->('t415') if $Whatpm::HTML::Debug::cp_pass;
-      BEGIN {
-        $Whatpm::HTML::Debug::cp->{'t415'} = 1;
-      }
-    
-          ## As if <p>, then reprocess the current token
-          my $el;
-          
-      $el = $self->{document}->create_element_ns
-        (q<http://www.w3.org/1999/xhtml>, [undef,  'p']);
-    
-          $insert->($el);
         } else {
           
       $Whatpm::HTML::Debug::cp_pass->('t416') if $Whatpm::HTML::Debug::cp_pass;
@@ -10915,6 +10900,92 @@ sub _tree_construction_main ($) {
         }
         
         splice @{$self->{open_elements}}, $i if defined $i;
+        $token = $self->_get_next_token;
+        redo B;
+      } elsif ($token->{tag_name} eq 'p') {
+        ## has an element in scope
+        my $i;
+        INSCOPE: for (reverse 0..$#{$self->{open_elements}}) {
+          my $node = $self->{open_elements}->[$_];
+          if ($node->[1] eq $token->{tag_name}) {
+            ## generate implied end tags
+            while ({
+                    dd => 1, dt => 1, li => 1, p => 0,
+                   }->{$self->{open_elements}->[-1]->[1]}) {
+              
+      $Whatpm::HTML::Debug::cp_pass->('t409.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t409.1'} = 1;
+      }
+    
+              pop @{$self->{open_elements}};
+            }
+            
+            
+      $Whatpm::HTML::Debug::cp_pass->('t410.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t410.1'} = 1;
+      }
+    
+            $i = $_;
+            last INSCOPE unless $token->{tag_name} eq 'p';
+          } elsif ({
+                    table => 1, caption => 1, td => 1, th => 1,
+                    button => 1, marquee => 1, object => 1, html => 1,
+                   }->{$node->[1]}) {
+            
+      $Whatpm::HTML::Debug::cp_pass->('t411.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t411.1'} = 1;
+      }
+    
+            last INSCOPE;
+          }
+        } # INSCOPE
+        
+        if ($self->{open_elements}->[-1]->[1] ne $token->{tag_name}) {
+          if (defined $i) {
+            
+      $Whatpm::HTML::Debug::cp_pass->('t412.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t412.1'} = 1;
+      }
+    
+            $self->{parse_error}-> (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
+          } else {
+            
+      $Whatpm::HTML::Debug::cp_pass->('t413.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t413.1'} = 1;
+      }
+    
+            $self->{parse_error}-> (type => 'unmatched end tag:'.$token->{tag_name});
+          }
+        }
+        
+        if (defined $i) {
+          
+      $Whatpm::HTML::Debug::cp_pass->('t414.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t414.1'} = 1;
+      }
+    
+          splice @{$self->{open_elements}}, $i;
+        } else {
+          
+      $Whatpm::HTML::Debug::cp_pass->('t415.1') if $Whatpm::HTML::Debug::cp_pass;
+      BEGIN {
+        $Whatpm::HTML::Debug::cp->{'t415.1'} = 1;
+      }
+    
+          ## As if <p>, then reprocess the current token
+          my $el;
+          
+      $el = $self->{document}->create_element_ns
+        (q<http://www.w3.org/1999/xhtml>, [undef,  'p']);
+    
+          $insert->($el);
+        }
         $token = $self->_get_next_token;
         redo B;
       } elsif ({
@@ -11262,4 +11333,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/06 15:56:52 $
+# $Date: 2008/03/08 02:29:22 $
