@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 10:54:36 2008
-# Current time GMT:   Sat Mar  8 01:54:36 2008
+# Current time local: Sat Mar  8 11:23:34 2008
+# Current time GMT:   Sat Mar  8 02:23:34 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
