@@ -1,7 +1,7 @@
 1..472
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 10:54:02 2008
-# Current time GMT:   Sat Mar  8 01:54:02 2008
+# Current time local: Sat Mar  8 11:22:48 2008
+# Current time GMT:   Sat Mar  8 02:22:48 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
