@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 10:54:12 2008
-# Current time GMT:   Sat Mar  8 01:54:12 2008
+# Current time local: Sat Mar  8 11:23:04 2008
+# Current time GMT:   Sat Mar  8 02:23:04 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
