@@ -1,3 +1,9 @@
+2008-03-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src (_tree_construction_main): '</p>' in body
+	case is split from other end tags for the preparation
+	of implementing HTML revision 1320.
+
 2008-03-07  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm.src: Simplified "generate implied end tag" (HTML5
